Working on menu button stopped on js

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    script(src="javascripts/layout.js")
     link(rel='stylesheet', href='/stylesheets/index.css')
     meta( name='viewport', content='width=device-width, initial-scale=1' )
   body
@@ -10,5 +11,13 @@ html
         div.title
           h1 Edgewood Country Club
           h3 Heritage & Excellence
-        div.button
-        
+        div.dropbutton
+          div#burger.hamburger
+            div.ham
+          div.dropcontent
+            a Home
+            a Membership
+            a Amenities
+            a Hours
+            a Private Events
+            a Member Login
