--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -53,18 +53,86 @@ body{
   transition: 1s;
 }
 
-.button{
+.dropbutton{
   position: absolute;
-  right: 0px;
+  right: 10px;
   bottom:  0px;
-  background-color: red;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
+  z-index: 12;
+  transition: 1s;
 }
 
+.hamburger {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+}
 
+.ham{
+  border-radius: 50px;
+  background-color: white;
+  width: 90%;
+  height: 15%;
+  transition: all .5s ease-in-out;
+}
 
+.ham::before,
+.ham::after {
+  content: '';
+  position: absolute;
+  border-radius: 50px;
+  background-color: white;
+  width: 90%;
+  height: 15%;
+  transition: all .5s ease-in-out;
+}
 
+.ham::before {
+  transform: translateY(-150%);
+}
+
+.ham::after {
+  transform: translateY(150%);
+}
+
+.dropcontent{
+  top: 100%;
+  left: -150%;
+  float: left;
+  position: absolute;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  height: 0;
+  transition: 0.3s ease-in;
+  -webkit-transition: 0.3s ease-in;
+  overflow: hidden;
+  background-color: white;
+}
+
+.dropcontent a{
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+
+}
+
+.dropbutton .dropcontent{
+ margin: 0px;
+}
+
+.dropbutton:hover .dropcontent {
+  height: 300px;
+}
 
 @media screen and (max-aspect-ratio: 4 / 3){
   .header img{
@@ -78,11 +146,6 @@ body{
     transition: 1s;
   }
 
-  .button{
-    width: 40px;
-    height: 40px;
-  }
-
 }
 
 @media screen and (max-aspect-ratio: 9 / 16){
@@ -94,6 +157,15 @@ body{
   .title h3{
     font-size: 4vw;
     transition: 1s;
+  }
+
+  .dropbutton{
+    width: 30px;
+    height: 30px;
+  }
+
+  .dropcontent {
+    left: -300%;
   }
 
 }
