--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -62,7 +62,7 @@ body{
   z-index: 12;
   transition: 1s;
 }
-
+ /* NAV BAR */
 .hamburger {
   width: 100%;
   height: 100%;
@@ -101,6 +101,19 @@ body{
   transform: translateY(150%);
 }
 
+.hamburger.open .ham{
+  background: transparent;
+}
+
+.hamburger.open .ham::before{
+  transform: rotate(45deg) ;
+}
+
+.hamburger.open .ham::after{
+  transform: rotate(-45deg);
+}
+
+/*NAV END */
 .dropcontent{
   top: 100%;
   left: -150%;
@@ -130,7 +143,7 @@ body{
  margin: 0px;
 }
 
-.dropbutton:hover .dropcontent {
+.dropbutton.open .dropcontent {
   height: 300px;
 }
 
