Switch routes from layout to begin setting up main home page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,3 +21,11 @@ html
             a Hours
             a Private Events
             a Member Login
+      
+      block content
+        
+      div.footer
+        h4 1600 Edgewood Dr. Charleston WV
+        h3 Heritage & Excellence
+        h4 P: 304-343-5557
+        h4 F: 304-343-2145
