--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -12,7 +12,7 @@ body{
   width: 100%;
   margin: 0;
   padding: 0;
-  position: relative;
+  position: absolute;
 }
 
 .header{
@@ -27,7 +27,7 @@ body{
 }
 
 .title{
-  width: 80%;
+  width: 70%;
   display: grid;
   align-items: center;
   justify-content: center;
@@ -53,6 +53,7 @@ body{
   transition: 1s;
 }
 
+/* NAV BAR */
 .dropbutton{
   position: absolute;
   right: 10px;
@@ -62,7 +63,7 @@ body{
   z-index: 12;
   transition: 1s;
 }
- /* NAV BAR */
+
 .hamburger {
   width: 100%;
   height: 100%;
@@ -113,7 +114,7 @@ body{
   transform: rotate(-45deg);
 }
 
-/*NAV END */
+
 .dropcontent{
   top: 100%;
   left: -150%;
@@ -146,6 +147,25 @@ body{
 .dropbutton.open .dropcontent {
   height: 300px;
 }
+/*NAV END */
+
+/* FOOTER BEGIN */
+
+.footer{
+  display: inline-flex;
+  width: 100%;
+  height: 10%;
+  background-color: black;
+  color: grey;
+  justify-content: center;
+  grid-column-gap: 3vw;
+}
+
+.footer h3 {
+  font-family: 'The Nautigal', cursive;
+}
+
+/* FOOTER END */
 
 @media screen and (max-aspect-ratio: 4 / 3){
   .header img{
@@ -179,6 +199,10 @@ body{
 
   .dropcontent {
     left: -300%;
+  }
+
+  .footer {
+    font-size: 0.5em
   }
 
 }
