--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,15 +1,123 @@
 .heroimg {
   background-image:linear-gradient(rgba(0, 0, 0, 0),80% , black 98%), url("/images/golf-course-one.jpg");
-  width: 100vw;
+  width: 100%;
   height: 50vh;
 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* #404040 */
+
 .who {
-  width: 100vw;
-  min-height: 40vh;
+  width: 100%;
+  min-height: 500px;
   background: black;
+  position: relative;
+}
+
+.whotitle {
+  background-color: black;
+  text-align: center;
+  height: 10%;
+  color: white;
+}
+.whotitle h1{
+  margin: 0;
+  padding: 0;
+}
+
+.who-tiles {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 90%;
+}
+
+.who-tile {
+  display: flex;
+  width: 30%;
+  height: 90%;
+  margin: 2.5%;
+  flex-direction: column;
+  align-items: center;
+  transition: 1s;
+}
+
+#tile-two {
+  margin: 0;
+  padding: 2.5%;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+}
+
+.tile-icon {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  transition: 1s;
+}
+
+.tile-icon img{
+  height: 5vw;
+  transition: 1s;
+}
+
+.tile-text{
+  width: 100%;
+  color: white;
+  text-align: center;
+  transition: 1s;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+@media screen and (max-aspect-ratio: 4 / 3){
+  .who-tiles {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .who-tile {
+    flex-direction: row;
+    width: 90%;
+    height: 30%;
+  }
+
+  .tile-icon {
+    width: auto;
+  }
+  .tile-icon img {
+    height: 16vw;
+  }
+
+  .tile-text {
+    width: 85%;
+  }
+
+  #tile-two {
+    border-right: none;
+    border-left: none;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+
+  .tile-text {
+    text-align: left;
+    font-size: 1em;
+    font-weight: bold;
+  }
+  .tile-text p{
+    padding-left: 2.5%;
+    padding-top: 1.5%;
+  }
+
+}
+
+
+@media screen and (max-aspect-ratio: 9 / 16){
+  .tile-text {
+    text-align: left;
+    font-size: .9em;
+    font-weight: bold;
+  }
 }
