--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=The+Nautigal&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 
 html{
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 body{
   min-height: 100vh;
@@ -152,6 +154,8 @@ body{
 /* FOOTER BEGIN */
 
 .footer{
+  background-color: black;
+  padding-top: 5%;
   display: inline-flex;
   width: 100%;
   height: 10%;
