--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -4,17 +4,21 @@
 
 html{
   width: 100%;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  scroll-behavior: smooth;
 }
 body{
-  min-height: 100vh;
+  height: auto;
+  min-height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
-  position: absolute;
+  display: flex;
+  flex-direction: column;
 }
 
 .header{
@@ -26,6 +30,11 @@ body{
   height: auto;
   width: 100%;
   color: white;
+  z-index: 3;
+}
+
+.header img {
+  transition: transform 0.4s;
 }
 
 .title{
@@ -33,6 +42,8 @@ body{
   display: grid;
   align-items: center;
   justify-content: center;
+  align-self: center;
+  margin-left: 1.5%;
   transition: 1s;
 }
 
@@ -42,16 +53,6 @@ body{
   align-self: center;
   font-size: 5vw;
   font-family: "Cinzel", serif;
-  transition: 1s;
-}
-
-.title h3{
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  align-self: center;
-  font-size: 3vw;
-  font-family: 'The Nautigal', cursive;
   transition: 1s;
 }
 
@@ -139,7 +140,11 @@ body{
   text-decoration: none;
   display: block;
   text-align: left;
-
+}
+.dropcontent a:hover {
+  background-color: #404040;
+  color: white;
+  transition: 0.3s;
 }
 
 .dropbutton .dropcontent{
@@ -158,11 +163,12 @@ body{
   padding-top: 5%;
   display: inline-flex;
   width: 100%;
-  height: 10%;
+  height: fit-content;
   background-color: black;
   color: grey;
   justify-content: center;
   grid-column-gap: 3vw;
+  position: relative;
 }
 
 .footer h3 {
@@ -171,10 +177,39 @@ body{
 
 /* FOOTER END */
 
+/*TOOLS*/
+.spacer {
+  width: 100%;
+  height: 20vw;
+  background-color: black;
+}
+
+.wrapper {
+  position: relative;
+  background-color: black;
+  width: 100%;
+  height: 50vw;
+}
+/*TOOLS END*/
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky img {
+  height: 10vh;
+  transition: 1s;
+}
+
+.sticky + .content {
+  padding-top: 225px;
+}
+
 @media screen and (max-aspect-ratio: 4 / 3){
   .header img{
     height: 20vh;
-    transition: 1s;
   }
 
   .title h3{
@@ -208,5 +243,12 @@ body{
   .footer {
     font-size: 0.5em
   }
-
+ /*Tools*/
+  .spacer {
+    height: 20vh;
+  }
+  .wrapper {
+    height: 60vh;
+  }
+  /*Tools end*/
 }
