--- a/views/home.jade
+++ b/views/home.jade
@@ -5,6 +5,13 @@ block content
   link(rel='stylesheet', href='/stylesheets/activities.css')
   
   div.heroimg
+    h1.desktop Heritage & Excellence
+    h1.mobile Heritage
+      br
+      | &
+      br
+      | Excellence
+  div.spacer
   div.who
     div.whotitle
       h1 Who are we?
@@ -25,4 +32,31 @@ block content
           img(src="/images/golf.svg")
         div.tile-text
           p Our deluxe facilities include an 18 hole championship Golf course, Har-tru tennis courts, double and singles Squash courts, Fitness facility and Swim complex. Our Racquets Pro, Fitness Pro and PGA Golf Pro are all available year-round, to keep you and your game in top form.
-  div.activities
+
+  div.spacer
+
+  div#amenititiesmarker.wrapper
+    div#text-img.dinner
+      div#di.dinner-text
+        h1#amenitities-titles Dinning
+        p#amenitities-text Edgewood Country Club offers an exquisite assortment of dinning experience. From business to recreational there is no social engagement which does not benefit from the culinary assortment provided by our team  
+      div#di.dinner-img
+      
+  div.spacer
+
+  div.wrapper
+    div#img-text.golf
+      div#di.golf-img
+      div#di.golf-text
+        h1#amenitities-titles Golf
+        p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
+  
+  div.spacer
+  
+  div.wrapper
+    div#text-img.test
+      div#di.test-text
+        h1#amenitities-titles Racquets
+        p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
+      div#di.test-img
+  
