--- a/views/home.jade
+++ b/views/home.jade
@@ -33,9 +33,9 @@ block content
         div.tile-text
           p Our deluxe facilities include an 18 hole championship Golf course, Har-tru tennis courts, double and singles Squash courts, Fitness facility and Swim complex. Our Racquets Pro, Fitness Pro and PGA Golf Pro are all available year-round, to keep you and your game in top form.
 
-  div.spacer
+  div#amenititiesmarker.spacer
 
-  div#amenititiesmarker.wrapper
+  div.wrapper
     div#text-img.dinner
       div#di.dinner-text
         h1#amenitities-titles Dinning
