--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
       div#buff.buffer
       div#head.header
         img#img(src='/images/logo.svg')
-        div.title
+        div#title.title
           h1 Edgewood Country Club
         div.dropbutton
           div#burger.hamburger
