--- a/views/home.jade
+++ b/views/home.jade
@@ -54,9 +54,46 @@ block content
   div.spacer
   
   div.wrapper
-    div#text-img.test
-      div#di.test-text
+    div#text-img.rac
+      div#di.rac-text
         h1#amenitities-titles Racquets
         p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
-      div#di.test-img
+      div#di.rac-img
   
+  div.spacer
+  
+  div.wrapper
+    div#img-text.pool
+        div#di.pool-img
+        div#di.pool-text
+            h1#amenitities-titles Aquatics
+            p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
+  
+  div.spacer
+  
+  div.wrapper
+    div#text-img.spa
+      div#di.spa-text
+        h1#amenitities-titles Spa
+        p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
+      div#di.spa-img
+      
+  div.spacer
+  
+  div.wrapper
+    div#img-text.gym
+        div#di.gym-img
+        div#di.gym-text
+            h1#amenitities-titles Gym
+            p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.    
+  div.wrapper-small
+    div.hours
+      h1 Hours
+      p More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events
+      
+      
+      
+      
+      
+      
+      
