--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,8 +17,12 @@ html
           div.dropcontent
             a(href="#buff") Home
             a Membership
-            a(href="#amenititiesmarker") Amenities
             a Hours
+            a(href="#amenititiesmarker") Dining
+            a golf
+            a Racquets
+            a Aquatics
+            a spa
             a Private Events
             a Member Login
       
