--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -25,7 +25,7 @@ body{
   position: relative;
   height: 225px;
   width: 100%;
-  transition: 1s;
+  transition: 0.3s;
 }
 
 .header{
@@ -42,7 +42,7 @@ body{
 
 .header img {
   height: 225px;
-  transition:1s;
+  transition: 0.4s;
 }
 
 .title{
@@ -52,7 +52,7 @@ body{
   justify-content: center;
   align-self: center;
   margin-left: 1.5%;
-  transition: 1s;
+  transition: 0.4s;
 }
 
 .title h1{
@@ -61,7 +61,7 @@ body{
   align-self: center;
   font-size: 5vw;
   font-family: "Cinzel", serif;
-  transition: 1s;
+  transition: 0.4s;
 }
 
 /* NAV BAR */
@@ -128,10 +128,10 @@ body{
 
 .dropcontent{
   top: 100%;
-  left: -150%;
+  left: -170%;
   float: left;
   position: absolute;
-  min-width: 100%;
+  width: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   height: 0;
@@ -151,6 +151,7 @@ body{
 }
 .dropcontent a:hover {
   background-color: #404040;
+  font-size: 18px;
   color: white;
   transition: 0.3s;
 }
@@ -160,19 +161,19 @@ body{
 }
 
 .dropbutton.open .dropcontent {
-  height: 300px;
+  height: 475px;
 }
 
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
-  transition: 1s;
+  transition: 0.4s;
 }
 
 .sticky img {
   height: 10vh;
-  transition: 1s;
+  transition: 0.4s;
 }
 
 .sticky + .content {
@@ -181,7 +182,7 @@ body{
 
 .shrink {
   height: 6vh !important;
-  transition: 1s;
+  transition: 0.4s;
 }
 
 .shrink-txt h1{
@@ -231,6 +232,15 @@ body{
   width: 100%;
   height: 50vw;
 }
+
+.wrapper-small {
+  position: relative;
+  background-color: black;
+  width: 100%;
+  height: 30vw;
+}
+
+
 /*TOOLS END*/
 
 
@@ -238,7 +248,7 @@ body{
 @media screen and (max-aspect-ratio: 4 / 3){
   .shrink img{
     height: 10vh !important;
-    transition: 1s;
+    transition: 0.4s;
   }
 
   .header img{
@@ -247,13 +257,13 @@ body{
 
   .buffer {
     height: 20vh;
-    transition: 1s;
+    transition: 0.3s;
   }
 
   .title h3{
     font-size: 4vw;
     text-align: left;
-    transition: 1s;
+    transition: 0.4s;
   }
 
 }
@@ -261,17 +271,17 @@ body{
 @media screen and (max-aspect-ratio: 9 / 16){
   .header img{
     height: 10vh;
-    transition: 1s;
+    transition: 0.4s;
   }
 
   .buffer {
     height: 10vh;
-    transition: 1s;
+    transition: 0.3s;
   }
 
   .title h3{
     font-size: 4vw;
-    transition: 1s;
+    transition: 0.4s;
   }
 
   .dropbutton{
@@ -280,7 +290,7 @@ body{
   }
 
   .dropcontent {
-    left: -300%;
+    left: -320%;
   }
 
   .shrink-txt h1{
@@ -297,10 +307,15 @@ body{
   }
  /*Tools*/
   .spacer {
-    height: 20vh;
+    height: 10vh;
   }
   .wrapper {
     height: 60vh;
+  }
+
+  .wrapper-small {
+
+    height: 40vh;
   }
   /*Tools end*/
 
