Pushing to work on arch

--- a/views/home.jade
+++ b/views/home.jade
@@ -33,16 +33,16 @@ block content
         div.tile-text
           p Our deluxe facilities include an 18 hole championship Golf course, Har-tru tennis courts, double and singles Squash courts, Fitness facility and Swim complex. Our Racquets Pro, Fitness Pro and PGA Golf Pro are all available year-round, to keep you and your game in top form.
 
-  div#amenititiesmarker.spacer
-
+  div.spacer
+  div#dining
   div.wrapper
     div#text-img.dinner
       div#di.dinner-text
-        h1#amenitities-titles Dinning
-        p#amenitities-text Edgewood Country Club offers an exquisite assortment of dinning experience. From business to recreational there is no social engagement which does not benefit from the culinary assortment provided by our team  
+        h1#amenitities-titles Dining
+        p#amenitities-text Edgewood Country Club offers an exquisite assortment of dining experience. From business to recreational there is no social engagement which does not benefit from the culinary assortment provided by our team  
       div#di.dinner-img
       
-  div.spacer
+  div.spacer#golf
 
   div.wrapper
     div#img-text.golf
@@ -51,7 +51,7 @@ block content
         h1#amenitities-titles Golf
         p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
   
-  div.spacer
+  div.spacer#Racquets
   
   div.wrapper
     div#text-img.rac
@@ -60,7 +60,7 @@ block content
         p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
       div#di.rac-img
   
-  div.spacer
+  div.spacer#pool
   
   div.wrapper
     div#img-text.pool
@@ -69,7 +69,7 @@ block content
             h1#amenitities-titles Aquatics
             p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
   
-  div.spacer
+  div.spacer#spa
   
   div.wrapper
     div#text-img.spa
@@ -78,7 +78,7 @@ block content
         p#amenitities-text More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events.
       div#di.spa-img
       
-  div.spacer
+  div.spacer#gym
   
   div.wrapper
     div#img-text.gym
@@ -89,7 +89,7 @@ block content
   div.wrapper-small
     div.hours
       h1 Hours
-      p More then 7000 yards of luscious green course, featuring fairways, slick, and bent grass tees. Our course are open and inviting for players of all skill levels providing greens for practice, competition or social events
+      
       
       
       
