--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,11 +18,12 @@ html
             a(href="#buff") Home
             a Membership
             a Hours
-            a(href="#amenititiesmarker") Dining
-            a golf
-            a Racquets
-            a Aquatics
-            a spa
+            a(href="#dining") Dining
+            a(href="#golf") golf
+            a(href="#Racquets") Racquets
+            a(href="#pool") Aquatics
+            a(href="#spa") spa
+            a(href="#gym") gym
             a Private Events
             a Member Login
       
