--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -33,7 +33,7 @@ body{
   position: absolute;
   padding-top: 1%;
   padding-bottom: 1%;
-  background-color: red;
+  background-color: black;
   height: auto;
   width: 100%;
   color: white;
