--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,14 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/index.css')
     meta( name='viewport', content='width=device-width, initial-scale=1' )
+    
+    script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-JXX0FG7DMK')
+    script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JXX0FG7DMK');
+    
   body
       div#buff.buffer
       div#head.header
