--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,12 +5,8 @@ html
     link(rel='stylesheet', href='/stylesheets/index.css')
     meta( name='viewport', content='width=device-width, initial-scale=1' )
     
-    script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-JXX0FG7DMK')
-    script.
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-JXX0FG7DMK');
+    script(src='https://www.googletagmanager.com/gtag/js?id=G-JXX0FG7DMK')
+    script(src="javascripts/ga.js")
     
   body
       div#buff.buffer
